[project]
name = "m4assigment3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"

dependencies = [
    "dataset",
    "datasets",
    "langchain",
    "langchain-openai",
    "numpy",
    "pandas",
    "pyarrow",
    "pydantic",
    "scikit-learn",
    "sentence-transformers",
    "torch",
    "tqdm",
    "transformers",
    "vllm>=0.10.0",
]
